优化脚本引擎